--- a/login.css
+++ b/login.css
@@ -1,7 +1,11 @@
-    
+
     #screen{
         height: 550px;
         width:70%;
         margin: auto;
         border:1px solid orange;
+    }
+    #left{
+        height: 550px;
+        width:
     }
