--- a/login.css
+++ b/login.css
@@ -6,7 +6,7 @@
 }
     #screen{
         height: 650px;
-        width:53%;
+        width:60%;
         margin: auto;
         /* border:5px solid green; */
        }
@@ -60,19 +60,21 @@
     }
     #logo{
         height: 350px;
+        width: 100%;
         border: 1px solid gainsboro;
     }
     #name{
-        height: 70px;
-        width: 65%;
+        height: 90px;
+        width: 80%;
         /* border: 1px solid red; */
         align-items: center;
-        margin: 30px 55px 30px ;
+        margin-left: 55PX;
+        /* margin: 30px 55px 30px ; */
         
     }
     #name>img{
         height: 100%;
-        width: 100%;
+        width: 80%;
         /* border: 1px solid red; */
 
     }
@@ -101,7 +103,7 @@
     }
     #fb>p:nth-child(2){
         text-align: center;
-        margin-top: 20px;
+        margin-top: 10px;
         font-size: 12px;
        
     }
@@ -112,6 +114,7 @@
         color: rgb(87, 86, 86);
         text-align: center;
         margin-top: 30px;
+        justify-content: center;
     }
     .right>p>span{
         background-color: rgb(0,149,246);
